tests/errors/array_shape_02.f90
program main 
integer :: x(3,2) = reshape([1,2,3,4],[2,2])
print * ,x
end program